--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,11 @@ android {
     }
 }
 
+repositories {
+    flatDir {
+        dirs project(':cordova-adapter').file('libs')
+    }
+}
 dependencies {
     implementation project(':cordova-adapter')
     implementation fileTree(dir: 'libs', include: ['*.jar'])
