--- a/cordova-adapter/build.gradle
+++ b/cordova-adapter/build.gradle
@@ -4,8 +4,8 @@ apply plugin: 'com.github.dcendents.android-maven'
 group='com.github.macrine'
 
 android {
-    compileSdkVersion 26
 
+    compileSdkVersion 26
 
 
     defaultConfig {
@@ -27,8 +27,15 @@ android {
 
 }
 
+repositories {
+    flatDir {
+        dirs 'libs'
+    }
+}
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    compile(name: 'cordova123', ext: 'aar')
+
 
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
