--- a/cordova-adapter/build.gradle
+++ b/cordova-adapter/build.gradle
@@ -4,6 +4,11 @@ apply plugin: 'com.github.dcendents.android-maven'
 group='com.github.macrine'
 
 android {
+    sourceSets {
+        main {
+            jniLibs.srcDirs = ['libs']
+        }
+    }
 
     compileSdkVersion 26
 
@@ -27,15 +32,8 @@ android {
 
 }
 
-repositories {
-    flatDir {
-        dirs 'libs'
-    }
-}
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    compile(name: 'cordova123', ext: 'aar')
-
 
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
