--- a/CordovaLib/build.gradle
+++ b/CordovaLib/build.gradle
@@ -31,6 +31,9 @@ buildscript {
 }
 
 apply plugin: 'com.android.library'
+apply plugin: 'com.github.dcendents.android-maven'
+
+group='com.github.macrine'
 
 ext {
     apply from: 'cordova.gradle'
