--- a/cordova-adapter/build.gradle
+++ b/cordova-adapter/build.gradle
@@ -28,7 +28,7 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    implementation project(':CordovaLib')
+    compile project(':CordovaLib')
 
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
